--- a/First_try/index.html
+++ b/First_try/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>First website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    Hey this is my first try
+    <script src="script.js"></script>
 </body>
 </html>
