--- a/Second/index.html
+++ b/Second/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create the book mark</title>
+    <title>Create the bookmarks</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>My Bookmarks</h1>
     <h2>Main Bookmarks</h2>
-    <h2>Main Bookmarks</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, at non? A, cumque iure fugiat alias commodi sit! Quibusdam dicta culpa possimus debitis dolore, mollitia perspiciatis laudantium? Deserunt, aperiam voluptatem.</p>
+    <p style="background-color: red;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae, consequatur!</p>
 </body>
 </html>
