--- a/Third/Index.html
+++ b/Third/Index.html
@@ -35,7 +35,7 @@
     <ul>
         <li>Sam</li>
         <li>Tanvi</li>
-        <li>Aancha</li>
+        <li>Aanchal</li>
         <li>Tarun</li>
         <li>Kapil</li>
         <li>Tamana</li>
@@ -45,7 +45,7 @@
     <ol type ="I">
         <li>Sam</li>
         <li>Tanvi</li>
-        <li>Aancha</li>
+        <li>Aanchal</li>
         <li>Tarun</li>
         <li>Kapil</li>
         <li>Tamana</li>
