--- a/Sixth/index.html
+++ b/Sixth/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <video src="video.mp4" poster="1.jpeg" height="400" width="500"  controls muted></video>
-    <audio src="adio.mp3" controls></audio>
+    <audio src="audio.mp3" controls></audio>
 </body>
 </html>
