--- a/13/index.html
+++ b/13/index.html
@@ -7,10 +7,10 @@
     <style>
         .box{
             width: 30vw;
-            height: 10vh;
+            height: 30vh;
             border: 2px solid black;
             overflow: auto;
-            white-space: nowrap;
+            /* white-space: nowrap; */
             /* text-overflow: ellipsis; */
         }
     </style>
